issue #3925 Allow leading whitespaces generally (do not trim messages) + allow tabs when pasting tab-intended text (#4055)
* issue #3925 allow leading tabs when pasting

* fix newlines in quoted text

* fix spaces in tests

* fix .replied_body

* fix footer

* add test

* do not trim encrypted messages

* do not trim lines from quote

* do not render empty quote

* fix tests

* upgrade squire-rte dependency

* remove unnecessary lines

* remove some more unnecessary lines

--- a/extension/css/cryptup.css
+++ b/extension/css/cryptup.css
@@ -1902,6 +1902,14 @@ table#compose td.text div#input_text {
   min-height: 140px;
 }
 
+table#compose td.text div#input_text,
+#pgp_block,
+#backup_block,
+div#reply_message_successful_container > table div.replied_body {
+  white-space: pre-wrap;
+  tab-size: 4;
+}
+
 table#compose td.text div#input_text img {
   max-width: 100%;
 }
